--- a/src/main/resources/templates/admin/category/index.html
+++ b/src/main/resources/templates/admin/category/index.html
@@ -43,7 +43,7 @@
             <!-- Modal Sửa -->
           <div th:replace="~{admin/fragments/model-update :: modalUpdate}"></div>
 
-             Modal Thêm
+<!--             Modal Thêm-->
             <div th:replace="~{admin/fragments/model-Add.html :: modalAdd}"></div>
 
 
