--- a/src/main/resources/templates/admin/fragments/model-update.html
+++ b/src/main/resources/templates/admin/fragments/model-update.html
@@ -8,12 +8,29 @@
                 </button>
             </div>
             <div class="modal-body">
-                <!-- Thêm các trường cần sửa ở đây -->
+                <form th:object="${newProduct}" id="dataForm" method="post" th:action="@{/admin/category/update${id}}">
+                    <input type="hidden" th:field="*{id}" />
+                    <div class="form-group">
+                        <label for="name">Name</label>
+                        <input type="text" class="form-control" id="name" name="name" th:field="*{nameProduct}" placeholder="Name">
+                    </div>
+                    <div class="form-group">
+                        <label for="price">Price</label>
+                        <input type="text" class="form-control" id="price" name="price" th:field="*{PRICE}" placeholder="Price">
+                    </div>
+                    <div class="form-group">
+                        <label for="descriptions">Descriptions</label>
+                        <input type="text" class="form-control" id="descriptions" name="descriptions" th:field="*{DESCRIPTION}" placeholder="Descriptions">
+                    </div>
+
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Đóng</button>
+                        <button type="submit" class="btn btn-primary">Lưu thay đổi</button>
+                    </div>
+
+                </form>
             </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Đóng</button>
-                <button type="button" class="btn btn-primary">Lưu thay đổi</button>
-            </div>
+
         </div>
     </div>
 </div>
